spacing-fix

--- a/src/assets/scss/components/_bank-card.scss
+++ b/src/assets/scss/components/_bank-card.scss
@@ -44,6 +44,7 @@
 }
 .recent-transacions {
   width: 100%;
+  margin-bottom: 4px;
   .header-title {
     margin-bottom: 16px;
   }
